--- a/wep-app-playbook.yml
+++ b/wep-app-playbook.yml
@@ -21,7 +21,13 @@
       - name: nginx config
         debug:
             msg: 'put nginx config in place'
+        notify: restart nginx
+        changed_when: True
 
       - name: ensure nginx running
         debug:
             msg: service nginx start'
+  handlers:
+      - name: restart nginx
+        debug:
+            msg: service nginx restart'
